--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -69,8 +69,8 @@
 			<label class="control-label visible-ie8 visible-ie9">Re-type Your Password</label>
 			<input class="form-control placeholder-no-fix" type="password" autocomplete="off" placeholder="请再次输入密码" name="rpassword"/>
 		</div>
-
 		<div class="form-actions">
+			<a href="login.html" type="button" class="btn btn-default">返回</a>
 			<button type="submit" class="btn btn-primary uppercase pull-right">提交</button>
 		</div>
 	</form>
