--- a/src/main/resources/templates/extra_search.html
+++ b/src/main/resources/templates/extra_search.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
+<!-- 
+Template Name: Metronic - Responsive Admin Dashboard Template build with Twitter Bootstrap 3.3.5
+Version: 4.1.0
+Author: KeenThemes
+Website: http://www.keenthemes.com/
+Contact: support@keenthemes.com
+Follow: www.twitter.com/keenthemes
+Like: www.facebook.com/keenthemes
+Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
+License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.
+-->
 <!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
 <!--[if !IE]><!-->
@@ -7,34 +18,32 @@
 <!-- BEGIN HEAD -->
 <head>
 <meta charset="utf-8"/>
-<title>第一资讯 - 财经新闻</title>
+<title>第一资讯 - 搜索结果</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta content="width=device-width, initial-scale=1" name="viewport"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 <meta content="" name="description"/>
 <meta content="" name="author"/>
-	<!-- BEGIN GLOBAL MANDATORY STYLES -->
-	<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css"/>
-	<link href="../static/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-	<link href="../static/css/simple-line-icons.min.css" rel="stylesheet" type="text/css"/>
-	<link href="../static/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-	<link href="../static/css/uniform.default.css" rel="stylesheet" type="text/css"/>
-	<link href="../static/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css"/>
-	<!-- END GLOBAL MANDATORY STYLES -->
-	<!-- BEGIN PAGE LEVEL PLUGIN STYLES -->
-	<link href="../static/css/daterangepicker-bs3.css" rel="stylesheet" type="text/css"/>
-	<link href="../static/css/jqvmap.css" rel="stylesheet" type="text/css"/>
-	<!-- END PAGE LEVEL PLUGIN STYLES -->
-	<!-- BEGIN PAGE STYLES -->
-	<link href="../static/css/tasks.css" rel="stylesheet" type="text/css"/>
-	<!-- END PAGE STYLES -->
-	<!-- BEGIN THEME STYLES -->
-	<!-- DOC: To use 'rounded corners' style just load 'components-rounded.css' stylesheet instead of 'components.css' in the below style tag -->
-	<link href="../static/css/components.css" id="style_components" rel="stylesheet" type="text/css"/>
-	<link href="../static/css/plugins.css" rel="stylesheet" type="text/css"/>
-	<link href="../static/css/layout.css" rel="stylesheet" type="text/css"/>
-	<link href="../static/css/grey.css" rel="stylesheet" type="text/css" id="style_color"/>
-	<link href="../static/css/custom.css" rel="stylesheet" type="text/css"/>
-	<!-- END THEME STYLES -->
+<!-- BEGIN GLOBAL MANDATORY STYLES -->
+<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css">
+<link href="../static/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link href="../static/css/simple-line-icons.min.css" rel="stylesheet" type="text/css">
+<link href="../static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link href="../static/css/uniform.default.css" rel="stylesheet" type="text/css">
+<link href="../static/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css"/>
+<!-- END GLOBAL MANDATORY STYLES -->
+<!-- BEGIN PAGE LEVEL STYLES -->
+<link rel="stylesheet" type="text/css" href="../static/bootstrap-datepicker/css/bootstrap-datepicker3.min.css"/>
+<link href="../static/css/search.css" rel="stylesheet" type="text/css"/>
+<!-- END PAGE LEVEL STYLES -->
+<!-- BEGIN THEME STYLES -->
+<link href="../static/css/components.css" id="style_components" rel="stylesheet" type="text/css"/>
+<link href="../static/css/plugins.css" rel="stylesheet" type="text/css"/>
+<link href="../static/css/layout.css" rel="stylesheet" type="text/css"/>
+<link id="style_color" href="../static/css/grey.css" rel="stylesheet" type="text/css"/>
+<link href="../static/css/custom.css" rel="stylesheet" type="text/css"/>
+<!-- END THEME STYLES -->
+<link rel="shortcut icon" href="favicon.ico"/>
 </head>
 <!-- END HEAD -->
 <!-- BEGIN BODY -->
@@ -47,16 +56,15 @@
 <!-- DOC: Apply "page-footer-fixed" class to the body element to have fixed footer -->
 <!-- DOC: Apply "page-sidebar-reversed" class to put the sidebar on the right side -->
 <!-- DOC: Apply "page-full-width" class to the body element to have full width page without the sidebar menu -->
-
-<body class="page-boxed page-header-fixed page-sidebar-closed-hide-logo page-container-bg-solid page-sidebar-closed-hide-logo">
+<body class="page-boxed page-header-fixed page-sidebar-closed-hide-logo page-container-bg-solid page-sidebar-closed-hide-logo" onload="userMessageReceive()">
 <!-- BEGIN HEADER -->
 <div class="page-header navbar navbar-fixed-top">
 	<!-- BEGIN HEADER INNER -->
 	<div class="page-header-inner container">
 		<!-- BEGIN LOGO -->
 		<div class="page-logo">
-			<a href="/index.html">
-			<img src="../static/img/logo-default.png" alt="logo" class="logo-default" style = "margin-top: 17px;" />
+			<a href="index.html">
+				<img src="../static/img/logo-default.png" alt="logo" class="logo-default" style = "margin-top: 17px;" />
 			</a>
 			<div class="menu-toggler sidebar-toggler">
 				<!-- DOC: Remove the above "hide" to enable the sidebar toggler button on header -->
@@ -85,7 +93,7 @@
 			<div class="top-menu">
 				<ul class="nav navbar-nav pull-right">
 
-				
+
 					<!-- BEGIN USER LOGIN DROPDOWN -->
 					<!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
 					<li class="dropdown dropdown-user">
@@ -96,18 +104,18 @@
 						</a>
 						<ul class="dropdown-menu dropdown-menu-default">
 							<li>
-								<a href="/extra_profile.html" id="user_profile">
+								<a href="extra_profile.html" id="user_profile">
 									<i class="icon-user"></i> 个人中心 </a>
 							</li>
 							<li>
-								<a href="/inbox.html">
+								<a href="inbox.html">
 									<i class="icon-envelope-open"></i> 投稿窗口
 								</a>
 							</li>
 							<li class="divider">
 							</li>
 							<li>
-								<a href="/login.html" id="user_logout">
+								<a href="login.html" id="user_logout">
 									<i class="icon-key" ></i> 登录 </a>
 							</li>
 						</ul>
@@ -140,41 +148,41 @@
 				<!-- DOC: Set data-keep-expand="true" to keep the submenues expanded -->
 				<!-- DOC: Set data-auto-speed="200" to adjust the sub menu slide up/down speed -->
 				<ul class="page-sidebar-menu page-sidebar-menu-hover-submenu " data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
-					<li>
-						<a href="/index.html">
-						<i class="icon-home"></i>
-						<span class="title">首页</span>
+					<li class="start active ">
+						<a href="index.html">
+							<i class="icon-home"></i>
+							<span class="title">首页</span>
+							<span class="selected"></span>
 						</a>
 					</li>
 					<li>
-						<a href="/musenews.html">
-						<i class="icon-music-tone"></i>
-						<span class="title">娱乐</span>
+						<a href="musenews.html">
+							<i class="icon-music-tone"></i>
+							<span class="title">娱乐</span>
 						</a>
 					</li>
 					<li>
-						<a href="/sportsnews.html">
-						<i class="icon-flag"></i>
-						<span class="title">体育</span>
+						<a href="sportsnews.html">
+							<i class="icon-flag"></i>
+							<span class="title">体育</span>
 						</a>
 					</li>
 					<li>
-						<a href="/technews.html">
-						<i class="icon-chemistry"></i>
-						<span class="title">科技</span>
+						<a href="technews.html">
+							<i class="icon-chemistry"></i>
+							<span class="title">科技</span>
 						</a>
 					</li>
 					<li>
-						<a href="/militarynews.html">
-						<i class="icon-rocket"></i>
-						<span class="title">军事</span>
+						<a href="militarynews.html">
+							<i class="icon-rocket"></i>
+							<span class="title">军事</span>
 						</a>
 					</li>
-					<li  class="start active ">
-						<a href="/financenews.html">
-						<i class="icon-basket"></i>
-						<span class="title">财经</span>
-						<span class="selected"></span>
+					<li>
+						<a href="financenews.html">
+							<i class="icon-basket"></i>
+							<span class="title">财经</span>
 						</a>
 					</li>
 				</ul>
@@ -185,98 +193,82 @@
 		<!-- BEGIN CONTENT -->
 		<div class="page-content-wrapper">
 			<div class="page-content">
-				
-				
 				<!-- BEGIN PAGE HEADER-->
-				<h3 class="page-title" style="font-size: 25px;">
-				财经新闻</h3>
+				<h3 class="page-title">
+					搜索结果 <small>以下为'<div th:text="${newsname}" style="display: inline;">asd</div>'搜索结果</small>
+				</h3>
 				<div class="page-bar">
 					<ul class="page-breadcrumb">
 						<li>
 							<i class="fa fa-home"></i>
-							<a href="/index.html">Home</a>
+							<a href="index.html">首页</a>
 							<i class="fa fa-angle-right"></i>
 						</li>
 						<li>
-							<a href="/#">财经新闻</a>
+							<a href="#">搜索结果</a>
 						</li>
 					</ul>
 				</div>
 				<!-- END PAGE HEADER-->
-				<div class="clearfix">
-				</div>
+				<!-- BEGIN PAGE CONTENT-->
 				<div class="row">
-					<div class="col-md-12 col-sm-12">
-						<div class="portlet light ">
-							<div class="portlet-title">
-								<div class="caption">
-									<i class="icon-share font-blue-steel hide"></i>
-									<span class="caption-subject font-blue-steel bold uppercase">财经新闻总览</span>
-							</div>
-						</div>
-							<div class="portlet-body">
-								<div class="scroller" data-always-visible="1" data-rail-visible="0">
-									<ul class="feeds">
-										<li th:each="m : ${news}">
-											<a th:href="@{/newsitem/}+${m.n_id}" >
-												<div class="col1">
-													<div class="cont">
-														<div class="cont-col2">
-															<div class="desc" style="font-size: 14px;" th:text="${m.title}">
-																财经新闻测试
+					<div class="col-md-12">
+						<div class="tabbable tabbable-custom tabbable-noborder">
+							<ul class="nav nav-tabs">
+								<li class="active">
+									<a data-toggle="tab" href="#tab_2_2">
+									新闻搜索 </a>
+								</li>
+							</ul>
+							<div class="tab-content">
+								<div id="tab_2_2" class="tab-pane active">
+									<div class="row">
+										<div class="col-md-12">
+											<div class="scroller" data-always-visible="1" data-rail-visible="0">
+												<ul class="feeds">
+													<li th:each="m : ${news}">
+														<a th:href="@{/newsitem/}+${m.n_id}" >
+															<div class="col1">
+																<div class="cont">
+																	<div class="cont-col2">
+																		<div class="desc" style="font-size: 14px;" th:text="${m.title}">
+																			体育新闻测试
+																		</div>
+																	</div>
+																</div>
 															</div>
-														</div>
-													</div>
-												</div>
-												<div class="col2">
-													<div style="width:90px;margin-top:5px;font-style: italic;color:grey;cursor: not-allowed; " th:text="${m.time}">
-														2020-12-11
-													</div>
-												</div>
-											</a>
-										</li>
-
-									</ul>
-								</div>	
+															<div class="col2">
+																<div style="width:90px;margin-top:5px;font-style: italic;color:grey;cursor: not-allowed; " th:text="${m.time}">
+																	2020-12-11
+																</div>
+															</div>
+														</a>
+													</li>
+												</ul>
+											</div>
+										</div>
+										<!--end search-->
+									</div>
+								</div>
+								<!--end tab-pane-->
 							</div>
 						</div>
 					</div>
+					<!--end tabbable-->
 				</div>
-				<div class="clearfix">
-				</div>	
-				<!--START PAGE CHANGER-->
-				<div class="row">
-					<ul class="pagination"
-						style="visibility: visible;margin-left: 70px;">
-						<li class="prev" th:class="${pageInfo.prePage} == 0 ? 'disabled':'' ">
-							<!-- 上一页-->
-							<a th:href="${pageInfo.prePage} == 0 ? 'javascript:void(0)':@{'/financenews/list?pageNum='+${pageInfo.prePage}}" title="上一页" aria-label="Previous">
-								<span aria-hidden="true">&laquo;</span>
-							</a>
-						</li>
-
-						<li  th:each="pageNum : ${pageInfo.navigatepageNums}"><a th:href="@{'/financenews/list?pageNum='+${pageNum}}">[[${pageNum}]]</a></li>
-
-						<li class="next" th:class="${pageInfo.nextPage} == 0 ? 'disabled':'' ">
-							<a th:href="${pageInfo.nextPage} == 0 ? 'javascript:void(0)':@{'/financenews/list?pageNum='+${pageInfo.nextPage}}" title="下一页"  aria-label="Next">
-								<span aria-hidden="true">&raquo;</span>
-							</a>
-						</li>
-					</ul>
-				</div>
-				<div class="clearfix">
-				</div>
-				<!--END PAGE CHANGER-->
-			</div>						
+				<!-- END PAGE CONTENT-->
+			</div>
 		</div>
-	</div>	
-	 		<!-- END CONTENT -->
+		<!-- END CONTENT -->
+		<!-- BEGIN QUICK SIDEBAR -->
+		<!--Cooming Soon...-->
+		<!-- END QUICK SIDEBAR -->
+	</div>
 	<!-- END CONTAINER -->
 	<!-- BEGIN FOOTER -->
 	<div class="page-footer">
 		<div class="page-footer-inner">
-			 2020 DYZXNews By SCUStudents
-		</div>
+			2020 DYZXWeb By SCUStudents		</div>
 		<div class="scroll-to-top">
 			<i class="icon-arrow-up"></i>
 		</div>
@@ -285,7 +277,12 @@
 </div>
 <!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
 <!-- BEGIN CORE PLUGINS -->
+<!--[if lt IE 9]>
+<script src="../static/js/respond.min.js"></script>
+<script src="../static/js/excanvas.min.js"></script>
+<![endif]-->
 <script src="../static/js/jquery.min.js" type="text/javascript"></script>
+<script src="../static/js/jquery-migrate.min.js" type="text/javascript"></script>
 <!-- IMPORTANT! Load jquery-ui.min.js before bootstrap.min.js to fix bootstrap tooltip conflict with jquery ui tooltip -->
 <script src="../static/js/jquery-ui.min.js" type="text/javascript"></script>
 <script src="../static/js/bootstrap.min.js" type="text/javascript"></script>
@@ -296,24 +293,12 @@
 <script src="../static/js/jquery.uniform.min.js" type="text/javascript"></script>
 <script src="../static/js/bootstrap-switch.min.js" type="text/javascript"></script>
 <!-- END CORE PLUGINS -->
-<!-- BEGIN PAGE LEVEL PLUGINS -->
-<script src="../static/js/jquery.flot.min.js" type="text/javascript"></script>
-<script src="../static/js/jquery.flot.resize.min.js" type="text/javascript"></script>
-<script src="../static/js/jquery.flot.categories.min.js" type="text/javascript"></script>
-<script src="../static/js/jquery.pulsate.min.js" type="text/javascript"></script>
-<script src="../static/js/moment.min.js" type="text/javascript"></script>
-<script src="../static/js/daterangepicker.js" type="text/javascript"></script>
-<script src="../static/js/jquery.easypiechart.min.js" type="text/javascript"></script>
-<script src="../static/js/jquery.sparkline.min.js" type="text/javascript"></script>
-<!-- END PAGE LEVEL PLUGINS -->
-<!-- BEGIN PAGE LEVEL SCRIPTS -->
+<script type="text/javascript" src="../static/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
+	<script src="../static/js/jquery.fancybox.pack.js"></script>
 <script src="../static/js/metronic.js" type="text/javascript"></script>
 <script src="../static/js/layout.js" type="text/javascript"></script>
-<script src="../static/js/quick-sidebar.js" type="text/javascript"></script>
 <script src="../static/js/demo.js" type="text/javascript"></script>
-<script src="../static/js/index.js" type="text/javascript"></script>
-<script src="../static/js/tasks.js" type="text/javascript"></script>
-<!-- END PAGE LEVEL SCRIPTS -->
+<script src="../static/js/search.js"></script>
 <script th:inline="javascript">
 	jQuery(document).ready(function() {
 		Metronic.init(); // init metronic core componets
@@ -344,10 +329,11 @@
 			$("#user_span").html(usersname);
 			$("#user_logout").attr("href","/loginOut").html("<i class=\"icon-key\" ></i>登出");
 		}
-		if(userpermit == 1)
+		if(userpermit==1)
 		{
 			$("#user_profile").attr("href","/admincenter").html("<i class=\"icon-user\"></i> 管理中心");
 		}
+
 	}
 </script>
 <!-- END JAVASCRIPTS -->
