--- a/src/main/resources/templates/page_news_item.html
+++ b/src/main/resources/templates/page_news_item.html
@@ -15,6 +15,7 @@
 <meta content="" name="description"/>
 <meta content="" name="author"/>
 <!-- BEGIN GLOBAL MANDATORY STYLES -->
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css">
 <link href="../static/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 <link href="../static/css/simple-line-icons.min.css" rel="stylesheet" type="text/css">
@@ -214,7 +215,7 @@
 											<div class="col-md-6">
 												<ul class="list-inline blog-tags">
 													<li>
-														<i class="fa fa-tags"></i>
+														<i class="fa fa-tags "></i>
 														<a href="javascript:" th:text="${news.category}">
 														科技 </a>
 
@@ -224,6 +225,7 @@
 											<div class="col-md-6 blog-tag-data-inner">
 												<ul class="list-inline">
 													<li>
+														<i class="fa fa-star" onclick="collect()"></i>收藏
 														<i class="fa fa-calendar"></i>
 														<a href="javascript:" th:text="${news.time}">
 														April 16, 2020 </a>
@@ -237,54 +239,73 @@
 												新闻测试用例总之就是编的。 新闻测试用例总之就是编的。 新闻测试用例总之就是编的。 新闻测试用例总之就是编的。 新闻测试用例总之就是编的。 新闻测试用例总之就是编的。 新闻测试用例总之就是编的。 新闻测试用例总之就是编的。 新闻测试用例总之就是编的。 新闻测试用例总之就是编的。 新闻测试用例总之就是编的。 新闻测试用例总之就是编的。 新闻测试用例总之就是编的。											</p>
 										</div>
 										<hr>
-										<div class="media">
-											<h3>评论</h3>
-											<a href="/javascript:" class="pull-left">
-											<img alt="" src="../static/img/9.jpg" class="media-object">
-											</a>
+										
+											<i class="fa fa-comments" style="font-size: 22px;"></i> <span style="font-size: 16px;">
+												评论
+											</span>
+							
+										<div class="media" th:each="comment:${comment}">
 											<div class="media-body">
-												<h4 class="media-heading">水军一号 <span>
-												5 小时前 
+												<h4 class="media-heading" >[[${comment.author.username}]] <span >
+												[[${comment.time}]] 
 												</span>
 												</h4>
-												<p>
+												<p th:text="${comment.contents}">
 													 好棒好喜欢支持了
 												</p>
 											</div>
 										</div>
-										<!--end media-->
-										<div class="media">
-											<a href="/javascript:" class="pull-left">
-											<img alt="" src="../static/img/6.jpg" class="media-object">
-											</a>
-											<div class="media-body">
-												<h4 class="media-heading">水军二号<span>
-												2020年11月10日
-												</span>
-												</h4>
-												<p>
-													哇看起来好棒期待
-												</p>
-											</div>
+										<div class="clearfix">
 										</div>
 										<!--end media-->
+										<!-- BEGIN CONTAINER -->
+														<!--START PAGE CHANGER-->
+														<div class="row">
+															<ul class="pagination" style="visibility: visible;margin-left: 50px;">
+																<li class="prev" th:class="${pageInfo.prePage} == 0 ? 'disabled':'' ">
+																	<!-- 上一页-->
+																	<a th:href="${pageInfo.prePage} == 0 ? 'javascript:void(0)':@{'/musenews/list?pageNum='+${pageInfo.prePage}}"
+																		title="上一页" aria-label="Previous">
+																		<span aria-hidden="true">&laquo;</span>
+																	</a>
+																</li>
+										
+																<li th:each="pageNum : ${pageInfo.navigatepageNums}"><a
+																		th:href="@{'/musenews/list?pageNum='+${pageNum}}">[[${pageNum}]]</a></li>
+										
+																<li class="next" th:class="${pageInfo.nextPage} == 0 ? 'disabled':'' ">
+																	<a th:href="${pageInfo.nextPage} == 0 ? 'javascript:void(0)':@{'/musenews/list?pageNum='+${pageInfo.nextPage}}"
+																		title="下一页" aria-label="Next">
+																		<span aria-hidden="true">&raquo;</span>
+																	</a>
+																</li>
+															</ul>
+														</div>
+														
+												
+										
+
 										<hr>
 										<div class="post-comment">
 											<h3>发表回复</h3>
-											<form role="form" action="#">
-												<div class="form-group">
+											<form th:action="@{/publishcomment}"  method="post">
+												<!-- <div class="form-group">
 													<label class="control-label">名称<span class="required">
 													* </span>
 													</label>
 													<input type="text" class="form-control">
-												</div>
+												</div> -->
 												<div class="form-group">
+													<input type="hidden" name="newsid" autocomplete="off" th:value="${news.n_id}" />
+													<input type="hidden" name="commentuser" autocomplete="off" th:value="${session.user?.username}" />
 													<label class="control-label">回复内容<span class="required">
 													* </span>
 													</label>
-													<textarea class="col-md-10 form-control" rows="8"></textarea>
+													<textarea class="col-md-10 form-control" rows="8" name="contents"></textarea>
 												</div>
+												
 												<button class="margin-top-20 btn blue" type="submit">发表回复</button>
+												
 											</form>
 										</div>
 									</div>	
@@ -300,7 +321,14 @@
 		<!-- BEGIN QUICK SIDEBAR -->
 		<!--Cooming Soon...-->
 		<!-- END QUICK SIDEBAR -->
+		
 	</div>
+	<form id="collectform" method="post">
+		<input type="hidden" name="u_id" autocomplete="off" th:value="${session.user?.u_id}"/>
+		<input type="hidden" name="n_id" autocomplete="off" th:value="${news.n_id}"/>
+		<input type="hidden" name="title" autocomplete="off" th:value="${news.title}"/>
+	</form>
+	
 	<!-- END CONTAINER -->
 	<!-- BEGIN FOOTER -->
 	<div class="page-footer">
@@ -313,6 +341,8 @@
 	</div>
 	<!-- END FOOTER -->
 </div>
+
+
 <!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
 <!-- BEGIN CORE PLUGINS -->
 <!--[if lt IE 9]>
@@ -355,9 +385,13 @@ function userinfo(){
 	showresult();
 }
 function showresult() {
-	var result = [[${result}]];
+	var result = [[ ${result} ]];
 	if(result!= null)
 		alert(result);
+}
+function collect()
+{
+	$("#collectform").attr("action","/collectnews").submit();
 }
 </script>
 <!-- END JAVASCRIPTS -->
