--- a/src/main/resources/templates/extra_profile.html
+++ b/src/main/resources/templates/extra_profile.html
@@ -94,7 +94,7 @@
 									<i class="icon-user"></i> 个人中心 </a>
 							</li>
 							<li>
-								<a href="/inbox.html">
+								<a href="/contributesubmit.html">
 									<i class="icon-envelope-open"></i> 投稿窗口
 								</a>
 							</li>
@@ -243,10 +243,10 @@
 												</div>
 												<ul class="nav nav-tabs">
 													<li class="active">
-														<a href="/#tab_1_1" data-toggle="tab">更换密码</a>
+														<a href="#tab_1_1" data-toggle="tab">更换密码</a>
 													</li>
 													<li>
-														<a href="/#tab_1_2" data-toggle="tab">喜好设置</a>
+														<a href="#tab_1_2" data-toggle="tab">喜好设置</a>
 													</li>
 												</ul>
 											</div>
