--- a/src/main/resources/templates/news_edit.html
+++ b/src/main/resources/templates/news_edit.html
@@ -94,14 +94,14 @@
 						<i class="icon-user"></i> 个人中心 </a>
 				</li>
 				<li>
-					<a href="inbox.html">
+					<a href="/contributesubmit.html">
 						<i class="icon-envelope-open"></i> 投稿窗口
 					</a>
 				</li>
 				<li class="divider">
 				</li>
 				<li>
-					<a href="login.html" id="user_logout">
+					<a href="/login.html" id="user_logout">
 						<i class="icon-key" ></i> 登录 </a>
 				</li>
 			</ul>
