--- a/src/main/resources/templates/adminmail.html
+++ b/src/main/resources/templates/adminmail.html
@@ -7,7 +7,7 @@
 <!-- BEGIN HEAD -->
 <head>
 <meta charset="utf-8"/>
-<title>第一资讯 - 新闻管理</title>
+<title>第一资讯 - 管理员信箱</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -195,7 +195,7 @@
 							<i class="fa fa-angle-right"></i>
 						</li>
 						<li>
-							<a href="/#">新闻管理</a>
+							<a href="/#">管理员信箱</a>
 						</li>
 					</ul>
 				</div>
@@ -216,12 +216,12 @@
 												<i class="icon-user"></i>
 												用户管理</a>
 										</li>
-										<li class="active">
-											<a href="/newsmanage.html">
+										<li>
+											<a href="/newsmanage.html" target="_blank">
 												<i class="icon-doc"></i>
 												新闻管理 </a>
 										</li>
-										<li>
+										<li class="active">
 											<a href="/adminmail.html" target="_blank">
 												<i class="icon-folder"></i>
 												管理员信箱 </a>
@@ -242,24 +242,20 @@
 											<div class="caption caption-md">
 												<i class="icon-globe theme-font hide"></i>
 												<span
-														class="caption-subject font-blue-madison bold uppercase">新闻管理</span>
+														class="caption-subject font-blue-madison bold uppercase">管理员信箱</span>
 											</div>
 											<ul class="nav nav-tabs">
 												<li class="active">
-													<a href="#tab_1_1" data-toggle="tab">删改新闻</a>
+													<a href="#tab_1_1" data-toggle="tab">投稿管理</a>
 												</li>
 												<li>
-													<a href="#tab_1_2" data-toggle="tab">敏感词管理</a>
+													<a href="#tab_1_2" data-toggle="tab">举报信息</a>
 												</li>
 											</ul>
 										</div>
 										<div class="portlet-body">
 											<div class="tab-content">
 												<div class="tab-pane active" id="tab_1_1">
-													<div class="row">
-														<a href="/news_publish.html"><button type="button" class="btn btn-circle btn-primary" style="margin-left:10px;margin-top:10px">+ 添加新闻</button></a>
-													</div>
-												<!-- NEWS SETTINGS TAB -->
 													<div class="portlet-body">
 														<div id="sample_1_wrapper"
 															 class="dataTables_wrapper no-footer">
@@ -296,6 +292,11 @@
 																		<th class="sorting_disabled"
 																			rowspan="1" colspan="1"
 																			aria-label="Status" style="width: 95px;">
+																			投稿用户
+																		</th>
+																		<th class="sorting_disabled"
+																			rowspan="1" colspan="1"
+																			aria-label="Status" style="width: 95px;">
 																			操作
 																		</th>
 
@@ -315,10 +316,13 @@
 																		<td class="sorting_1" th:text="${m.source}">
 																			来源
 																		</td>
+																		<td class="sorting_1" th:text="${m.source}">
+																			投稿用户
+																		</td>
 																		<td>
 																			<div class="btn-group btn-group-sm btn-group-solid">
-																				<button type="button" th:attr="edit_uri=@{/newsedit/}+${m.n_id}"class="btn blue changeBtn">修改新闻</button>
-																				<button  th:attr="del_uri=@{/newsdelete/}+${m.n_id}" type="button" class="btn red deleteBtn">删除新闻</button>
+																				<button type="button" th:attr="edit_uri=@{/newsedit/}+${m.n_id}"class="btn blue changeBtn">查看/编辑投稿</button>
+																				<button  th:attr="del_uri=@{/newsdelete/}+${m.n_id}" type="button" class="btn red deleteBtn">删除投稿</button>
 																			</div>
 																		</td>
 																	</tr>
@@ -333,15 +337,15 @@
 																			style="visibility: visible;">
 																			<li class="prev" th:class="${pageInfo.prePage} == 0 ? 'disabled':'' ">
 																				<!-- 上一页-->
-																				<a th:href="${pageInfo.prePage} == 0 ? 'javascript:void(0)':@{'/newsmanage/list?pageNum='+${pageInfo.prePage}}" title="上一页" aria-label="Previous">
+																				<a th:href="${pageInfo.prePage} == 0 ? 'javascript:void(0)':@{'/newsmail/list?pageNum='+${pageInfo.prePage}}" title="上一页" aria-label="Previous">
 																					<span aria-hidden="true">&laquo;</span>
 																				</a>
 																			</li>
 
-																			<li  th:each="pageNum : ${pageInfo.navigatepageNums}"><a th:href="@{'/newsmanage/list?pageNum='+${pageNum}}">[[${pageNum}]]</a></li>
+																			<li  th:each="pageNum : ${pageInfo.navigatepageNums}"><a th:href="@{'/newsmail/list?pageNum='+${pageNum}}">[[${pageNum}]]</a></li>
 
 																			<li class="next" th:class="${pageInfo.nextPage} == 0 ? 'disabled':'' ">
-																				<a th:href="${pageInfo.nextPage} == 0 ? 'javascript:void(0)':@{'/newsmanage/list?pageNum='+${pageInfo.nextPage}}" title="下一页"  aria-label="Next">
+																				<a th:href="${pageInfo.nextPage} == 0 ? 'javascript:void(0)':@{'/newsmail/list?pageNum='+${pageInfo.nextPage}}" title="下一页"  aria-label="Next">
 																					<span aria-hidden="true">&raquo;</span>
 																				</a>
 																			</li>
@@ -354,39 +358,29 @@
 												</div>
 												<div class="tab-pane" id="tab_1_2">
 													<div class="portlet light">
-														<div class="row">
-															<form th:action="@{/addwords}" method="post">
-																<div class="input-group">
-																	<input type="text" class="form-control" autocomplete="off" placeholder="添加敏感词..." name="words">
-																	<span class="input-group-btn">
-																	<button type="submit" class="btn btn-warning"><i class="fa fa-ban"></i>添加</a></button>
-																	</span>
+														<div class="portlet-title">
+															<div class="caption">
+																<i class="icon-paper-plane font-yellow-casablanca"></i>
+																<span class="caption-subject bold font-yellow-casablanca uppercase">
+																	Form Input </span>
+																<span class="caption-helper">more samples...</span>
+															</div>
+															<div class="inputs">
+																<div class="portlet-input input-inline input-medium">
+																	<div class="input-group">
+																		<input type="text" class="form-control input-circle-left" placeholder="search...">
+																		<span class="input-group-btn">
+											<button class="btn btn-circle-right btn-default" type="submit">Go!</button>
+											</span>
+																	</div>
 																</div>
-															</form>
-																<div class="table-scrollable">
-																	<table class="table table-striped table-hover">
-																		<thead>
-																		<tr>
-																			<th>
-																				敏感词内容
-																			</th>
-																			<th>
-																				操作
-																			</th>
-																		</tr>
-																		</thead>
-																		<tbody>
-																		<tr th:each="w : ${words}">
-																			<td th:text="${w.word}">
-																				我是脏话
-																			</td>
-																			<td>
-																				<button  th:attr="del_uri=@{/wordsdelete/}+${w.word_id}" type="button" class="btn btn-xs red deleteBtn2">删除</button>
-																			</td>
-																		</tr>
-																		</tbody>
-																	</table>
-																</div>
+															</div>
+														</div>
+														<div class="portlet-body">
+															<h4>Heading text goes here...</h4>
+															<p>
+																Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum.
+															</p>
 														</div>
 													</div>
 												</div>
@@ -395,6 +389,7 @@
 												</form>
 												<!-- END NEWS SETTINGS TAB -->
 											</div>
+
 										</div>
 									</div>
 								</div>
@@ -456,49 +451,6 @@
 <script src="../static/js/profile.js" type="text/javascript"></script>
 <script src="../static/js/login.js" type="text/javascript"></script>
 <!-- END PAGE LEVEL SCRIPTS -->
-<script>
-	$('#datepicker').datepicker({
-		format: 'yyyy-mm-dd'
-	});
-
-</script>
-<script>
-	$(".deleteBtn").click(function(){
-		var reconfirm=confirm("你确定要删除该新闻吗？");
-		if(reconfirm)
-		{
-			$("#deletenewsForm").attr("action",$(this).attr("del_uri")).submit();
-			return false;
-		}
-		else
-		{
-			return false;
-		}
-	});
-</script>
-<script>
-	$(".deleteBtn2").click(function(){
-		var reconfirm=confirm("你确定要删除该敏感词吗？");
-		if(reconfirm)
-		{
-			$("#deletenewsForm").attr("action",$(this).attr("del_uri")).submit();
-			return false;
-		}
-		else
-		{
-			return false;
-		}
-	});
-
-</script>
-<script>
-	$(".changeBtn").click(function(){
-			window.location.href=$(this).attr("edit_uri");
-
-
-	});
-
-</script>
 <script th:inline="javascript">
 jQuery(document).ready(function() {       
    // initiate layout and plugins
@@ -527,6 +479,28 @@ function userinfo(){
 	}
 }
 
+</script>
+<script>
+	$(".changeBtn").click(function(){
+		window.location.href=$(this).attr("edit_uri");
+
+
+	});
+
+</script>
+<script>
+	$(".deleteBtn").click(function(){
+		var reconfirm=confirm("你确定要删除该投稿吗？");
+		if(reconfirm)
+		{
+			$("#deletenewsForm").attr("action",$(this).attr("del_uri")).submit();
+			return false;
+		}
+		else
+		{
+			return false;
+		}
+	});
 </script>
 <!-- END JAVASCRIPTS -->
 </body>
