--- a/src/main/resources/templates/contributesubmit.html
+++ b/src/main/resources/templates/contributesubmit.html
@@ -7,7 +7,7 @@
 <!-- BEGIN HEAD -->
 <head>
 <meta charset="utf-8"/>
-<title>第一资讯 - 我的收藏</title>
+<title>第一资讯 - 投稿界面</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -22,6 +22,7 @@
 <link href="../static/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css"/>
 <!-- END GLOBAL MANDATORY STYLES -->
 <!-- BEGIN PAGE LEVEL STYLES -->
+	<link rel="stylesheet" type="text/css" href="../static/bootstrap-datepicker/css/bootstrap-datepicker3.min.css"/>
 <link rel="stylesheet" type="text/css" href="../static/css/select2.css"/>
 <!-- END PAGE LEVEL STYLES -->
 <!-- BEGIN THEME STYLES -->
@@ -44,15 +45,15 @@
 <!-- DOC: Apply "page-footer-fixed" class to the body element to have fixed footer -->
 <!-- DOC: Apply "page-sidebar-reversed" class to put the sidebar on the right side -->
 <!-- DOC: Apply "page-full-width" class to the body element to have full width page without the sidebar menu -->
-<body class="page-boxed page-header-fixed page-container-bg-solid page-sidebar-closed-hide-logo page-sidebar-closed" onload="userMessageReceive()">
+<body class="page-boxed page-header-fixed page-container-bg-solid page-sidebar-closed-hide-logo page-sidebar-closed"  onload="userinfo(),cpPassword()">
 <!-- BEGIN HEADER -->
 <div class="page-header navbar navbar-fixed-top">
 	<!-- BEGIN HEADER INNER -->
 	<div class="page-header-inner container">
 		<!-- BEGIN LOGO -->
 		<div class="page-logo">
-			<a href="index.html">
-				<img src="../static/img/logo-default.png" alt="logo" class="logo-default" style = "margin-top: 17px;" />
+			<a href="/index.html">
+			<img src="../static/img/logo-default.png" alt="logo" class="logo-default" style = "margin-top: 17px;"/>
 			</a>
 			<div class="menu-toggler sidebar-toggler">
 				<!-- DOC: Remove the above "hide" to enable the sidebar toggler button on header -->
@@ -63,7 +64,6 @@
 		<a href="javascript:" class="menu-toggler responsive-toggler" data-toggle="collapse" data-target=".navbar-collapse">
 		</a>
 		<!-- END RESPONSIVE MENU TOGGLER -->
-
 		<!-- BEGIN PAGE TOP -->
 		<div class="page-top">
 			<!-- BEGIN HEADER SEARCH BOX -->
@@ -77,39 +77,39 @@
 				</div>
 			</form>
 			<!-- END HEADER SEARCH BOX -->
-			<!-- BEGIN TOP NAVIGATION MENU -->
-			<div class="top-menu">
-				<ul class="nav navbar-nav pull-right">
-					<!-- BEGIN USER LOGIN DROPDOWN -->
-					<!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
-					<li class="dropdown dropdown-user">
-						<a href="javascript:" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true" >
-						<span class="username username-hide-on-mobile" id="user_span">
+<!-- BEGIN TOP NAVIGATION MENU -->
+<div class="top-menu">
+	<ul class="nav navbar-nav pull-right">
+		<!-- BEGIN USER LOGIN DROPDOWN -->
+		<!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
+		<li class="dropdown dropdown-user">
+			<a href="javascript:" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
+							<span class="username username-hide-on-mobile" id="user_span">
 						请登录</span>
-							<i class="fa fa-angle-down"></i>
-						</a>
-						<ul class="dropdown-menu dropdown-menu-default">
-							<li>
-								<a href="extra_profile.html" id="user_profile">
-									<i class="icon-user"></i> 个人中心 </a>
-							</li>
-							<li>
-								<a href="/contributesubmit.html">
-									<i class="icon-envelope-open"></i> 投稿窗口
-								</a>
-							</li>
-							<li class="divider">
-							</li>
-							<li>
-								<a href="login.html" id="user_logout">
-									<i class="icon-key" ></i> 登录 </a>
-							</li>
-						</ul>
-					</li>
-					<!-- END USER LOGIN DROPDOWN -->
-				</ul>
-			</div>
-			<!-- END TOP NAVIGATION MENU -->
+				<i class="fa fa-angle-down"></i>
+			</a>
+			<ul class="dropdown-menu dropdown-menu-default">
+				<li>
+					<a href="/extra_profile.html" id="user_profile">
+						<i class="icon-user"></i> 个人中心 </a>
+				</li>
+				<li>
+					<a href="/contributesubmit.html">
+						<i class="icon-envelope-open"></i> 投稿窗口
+					</a>
+				</li>
+				<li class="divider">
+				</li>
+				<li>
+					<a href="/login.html" id="user_logout">
+						<i class="icon-key" ></i> 登录 </a>
+				</li>
+			</ul>
+		</li>
+		<!-- END USER LOGIN DROPDOWN -->
+	</ul>
+</div>
+<!-- END TOP NAVIGATION MENU -->
 		</div>
 		<!-- END PAGE TOP -->
 	</div>
@@ -135,44 +135,43 @@
 				<!-- DOC: Set data-auto-speed="200" to adjust the sub menu slide up/down speed -->
 				<ul class="page-sidebar-menu page-sidebar-menu-hover-submenu page-sidebar-menu-closed " data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
 					<li class="start active ">
-						<a href="index.html">
+						<a href="/index.html">
 						<i class="icon-home"></i>
 						<span class="title">首页</span>
 						<span class="selected"></span>
 						</a>
 					</li>
 					<li>
-						<a href="musenews.html">
+						<a href="/musenews.html">
 						<i class="icon-music-tone"></i>
 						<span class="title">娱乐</span>
 						</a>
 					</li>
 					<li>
-						<a href="sportsnews.html">
+						<a href="/sportsnews.html">
 						<i class="icon-flag"></i>
 						<span class="title">体育</span>
 						</a>
 					</li>
 					<li>
-						<a href="technews.html">
+						<a href="/technews.html">
 						<i class="icon-chemistry"></i>
 						<span class="title">科技</span>
 						</a>
 					</li>
 					<li>
-						<a href="militarynews.html">
+						<a href="/militarynews.html">
 						<i class="icon-rocket"></i>
 						<span class="title">军事</span>
 						</a>
 					</li>
 					<li>
-						<a href="financenews.html">
+						<a href="/financenews.html">
 						<i class="icon-basket"></i>
 						<span class="title">财经</span>
 						</a>
 					</li>
 				</ul>
-				<!-- END SIDEBAR MENU -->
 			</div>
 		</div>
 		<!-- END SIDEBAR -->
@@ -181,102 +180,111 @@
 			<div class="page-content">
 				<!-- BEGIN PAGE HEADER-->
 				<h3 class="page-title">
-				我的收藏<small>收藏的新闻</small>
+				投稿新闻<small>在这输入你想投稿的新闻信息</small>
 				</h3>
 				<div class="page-bar">
 					<ul class="page-breadcrumb">
 						<li>
 							<i class="fa fa-home"></i>
-							<a href="index.html">Home</a>
+							<a href="/index.html">首页</a>
 							<i class="fa fa-angle-right"></i>
 						</li>
 						<li>
-							<a href="#">个人中心</a>
-							<i class="fa fa-angle-right"></i>
-						</li>
-						<li>
-							<a href="#">我的收藏</a>
+							<a href="/contributesubmit.html">投稿新闻</a>
 						</li>
 					</ul>
-					<!-- END PAGE HEADER-->
-					<div class="clearfix">
-					</div>
-					<div class="row">
-						<div class="col-md-12 col-sm-12">
-							<div class="portlet light ">
+				</div>
+				<!-- END PAGE HEADER-->
+				<!-- BEGIN PAGE CONTENT-->
+				<div class="row">
+					<div class="col-md-12">
+						<!-- BEGIN TODO CONTENT -->
+						<div class="todo-content">
+							<div class="portlet light">
+								<!-- PROJECT HEAD -->
 								<div class="portlet-title">
 									<div class="caption">
-										<i class="icon-share font-blue-steel hide"></i>
-										<span class="caption-subject font-blue-steel bold uppercase">收藏新闻管理</span>
+										<i class="icon-bar-chart font-green-sharp hide"></i>
+									 <span class="caption-subject font-green-sharp bold uppercase">新闻内容</span>
 									</div>
 								</div>
+								<!-- end PROJECT HEAD -->
 								<div class="portlet-body">
-									<div class="scroller" data-always-visible="1" data-rail-visible="0">
-										<ul class="feeds">
-											<li th:each="m : ${collection}">
-												<a th:href="@{/newsitem/}+${m.n_id}" >
-													<div class="col1">
-														<div class="cont">
-															<div class="cont-col2">
-																<div class="desc" style="font-size: 14px;" th:text="${m.title}">
-																	体育新闻测试
-																</div>
+									<div class="row">
+										<div class="todo-tasklist-devider">
+										</div>
+										<div class="col-md-12 col-sm-12">
+											<div class="scroller" style="max-height: 1000px;" data-always-visible="0" data-rail-visible="0" data-handle-color="#dae3e7">
+												<form th:action="@{/submitcontribute}" th:object="${news}" class="form-horizontal" method="post">
+													<!-- NEWS TITLE -->
+													<div class="form-group">
+														<div class="col-md-12">
+															<input type="text" class="form-control todo-taskbody-tasktitle" name="title" placeholder="新闻标题...">
+														</div>
+													</div>
+													<div class="form-group">
+														<div class="col-md-12">
+															<input type="text" class="form-control todo-taskbody-tasktitle" name="source" placeholder="新闻来源...">
+														</div>
+													</div>
+													<!-- NEWS DESC -->
+													<div class="form-group">
+														<div class="col-md-12">
+															<textarea class="form-control todo-taskbody-taskdesc" rows="8" style="height:600px" name="contents"  placeholder="新闻内容..."></textarea>
+														</div>
+													</div>
+													<!-- END NEWS DESC -->
+													<!-- NEWS DATE -->
+													<div class="form-group">
+														选择新闻分类:
+														<select  name="category" style="width: 100px; height: 34px;margin-left: 20px">
+															<option value ="娱乐新闻">娱乐新闻</option>
+															<option value ="体育新闻">体育新闻</option>
+															<option value="科技新闻">科技新闻</option>
+															<option value="军事新闻">军事新闻</option>
+															<option value="财经新闻">财经新闻</option>
+														</select>
+														<div class="col-md-6">
+															<div class="input-icon">
+																<i class="fa fa-calendar"></i>
+																<input type="text"  name="time" id="datepicker" class="form-control todo-taskbody-due" placeholder="新闻日期...">
 															</div>
 														</div>
-													</div></a>
-													<div class="col2">
-														<button  th:attr="del_uri=@{/collectionmanage/}+${m.c_id}" type="button" class="btn red deleteBtn">删除收藏</button>
 													</div>
-
-											</li>
-										</ul>
-									</div>
-									<div class="row">
-										<ul class="pagination"
-											style="visibility: visible;margin-left: 50px; margin-top: 20px";>
-											<li class="prev" th:class="${pageInfo.prePage} == 0 ? 'disabled':'' ">
-												<!-- 上一页-->
-												<a th:href="${pageInfo.prePage} == 0 ? 'javascript:void(0)':@{'/page_todo/list?pageNum='+${pageInfo.prePage}}" title="上一页" aria-label="Previous">
-													<span aria-hidden="true">&laquo;</span>
-												</a>
-											</li>
-
-											<li  th:each="pageNum : ${pageInfo.navigatepageNums}"><a th:href="@{'/page_todo/list?pageNum='+${pageNum}}">[[${pageNum}]]</a></li>
-
-											<li class="next" th:class="${pageInfo.nextPage} == 0 ? 'disabled':'' ">
-												<a th:href="${pageInfo.nextPage} == 0 ? 'javascript:void(0)':@{'/page_todo/list?pageNum='+${pageInfo.nextPage}}" title="下一页"  aria-label="Next">
-													<span aria-hidden="true">&raquo;</span>
-												</a>
-											</li>
-										</ul>
+													<div class="form-actions right todo-form-actions">
+														<button type="submit" class="btn btn-circle btn-sm green-haze">投稿</button>
+													</div>
+												</form>
+											</div>
+													
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+						<!-- END TODO CONTENT -->
+					</div>
+				</div>
+				<!-- END PAGE CONTENT-->
 		<!-- END CONTENT -->
 		<!-- BEGIN QUICK SIDEBAR -->
 		<!--Cooming Soon...-->
 		<!-- END QUICK SIDEBAR -->
-	<form id="deletecollectionForm"  method="post">
-		<input type="hidden" name="_method"  value="delete"/>
-	</form>
+	</div>
 	<!-- END CONTAINER -->
 	<!-- BEGIN FOOTER -->
 	<div class="page-footer">
-		<div class="page-footer-inner">
-			 2020 DYZXWeb BySCUStudents
+		<div class="page-footer-inner" style="margin-left: 150px;">
+			2020 DYZXWeb BySCUStudents
 		</div>
 		<div class="scroll-to-top">
 			<i class="icon-arrow-up"></i>
 		</div>
 	</div>
 	<!-- END FOOTER -->
-</div>
 <!-- BEGIN JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
 <!-- BEGIN CORE PLUGINS -->
 <!--[if lt IE 9]>
@@ -296,6 +304,7 @@
 <script src="../static/js/bootstrap-switch.min.js" type="text/javascript"></script>
 <!-- END CORE PLUGINS -->
 <!-- BEGIN PAGE PLUGINS & SCRIPTS -->
+<script type="text/javascript" src="../static/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
 <script type="text/javascript" src="../static/js/select2.min.js"></script>
 <script src="../static/js/todo.js" type="text/javascript"></script>
 <!-- END PAGE PLUGINS & SCRIPTS -->
@@ -304,26 +313,18 @@
 <script src="../static/js/demo.js" type="text/javascript"></script>
 <script th:inline="javascript">
 	jQuery(document).ready(function() {
-		Metronic.init(); // init metronic core componets
-		Layout.init(); // init layout
-		Demo.init(); // init demo features
-		QuickSidebar.init(); // init quick sidebar
-		Index.init();
-		Index.initDashboardDaterange();
-		Index.initJQVMAP(); // init index page's custom scripts
-		Index.initCalendar(); // init index page's custom scripts
-		Index.initCharts(); // init index page's custom scripts
-		Index.initChat();
-		Index.initMiniCharts();
-		Tasks.initDashboardWidget();
+		// initiate layout and plugins
+		Metronic.init(); // init metronic core components
+		Layout.init(); // init current layout
+		Demo.init(); // init demo features\
+		Profile.init(); // init page demo
 	});
-	function userMessageReceive(){
-		var register_message= [[${result}]];
-		if(register_message!=null)
-			alert(register_message);
-		userinfo();
-
+	function cpPassword() {
+		var cpPassword = [[${result}]];
+		if(cpPassword!=null)
+			alert(cpPassword);
 	}
+
 	function userinfo(){
 		var usersname=[[${session.user?.username}]];
 		var userpermit=[[${session.user?.permission}]];
@@ -332,25 +333,16 @@
 			$("#user_span").html(usersname);
 			$("#user_logout").attr("href","/loginOut").html("<i class=\"icon-key\" ></i>登出");
 		}
-		if(userpermit==1)
+		if(userpermit == 1)
 		{
 			$("#user_profile").attr("href","/admincenter").html("<i class=\"icon-user\"></i> 管理中心");
 		}
-
 	}
+
 </script>
 <script>
-	$(".deleteBtn").click(function(){
-		var reconfirm=confirm("你确定要删除该收藏吗？");
-		if(reconfirm)
-		{
-			$("#deletecollectionForm").attr("action",$(this).attr("del_uri")).submit();
-			return false;
-		}
-		else
-		{
-			return false;
-		}
+	$('#datepicker').datepicker({
+		format: 'yyyy-mm-dd'
 	});
 
 </script>
