--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -97,8 +97,8 @@
 								<i class="icon-user"></i> 个人中心 </a>
 							</li>
 							<li>
-								<a href="inbox.html">
-								<i class="icon-envelope-open"></i> 投稿窗口
+								<a href="/contributesubmit.html">
+									<i class="icon-envelope-open"></i> 投稿窗口
 								</a>
 							</li>
 							<li class="divider">
@@ -218,18 +218,20 @@
 											<div class="col1">
 												<div class="cont">
 													<div class="cont-col2">
-														<div class="desc" style="font-size: 14px;" th:text="${m.title}">
-															体育新闻测试
+														<div class="desc">
+															<div style="display: inline;font-size: 14px;"th:text="${m.title}">体育新闻测试</div>
+															<div style="display: inline;">——</div>
+															<div style="display: inline;"><small th:text="${m.category}">体育新闻</small></div>
 														</div>
 													</div>
 												</div>
 											</div>
+											</a>
 											<div class="col2">
-												<div style="width:90px;margin-top:5px;font-style: italic;color:grey;cursor: not-allowed; " th:text="${m.time}">
+												<div style="width:90px;margin-top:5px;font-style: italic;color:grey; " th:text="${m.time}">
 													 2020-12-11
 												</div>
 											</div>
-											</a>
 										</li>
 									</ul>
 								</div>	
