--- a/src/main/resources/templates/news_publish.html
+++ b/src/main/resources/templates/news_publish.html
@@ -94,7 +94,7 @@
 						<i class="icon-user"></i> 个人中心 </a>
 				</li>
 				<li>
-					<a href="/inbox.html">
+					<a href="/contributesubmit.html">
 						<i class="icon-envelope-open"></i> 投稿窗口
 					</a>
 				</li>
