--- a/src/main/resources/templates/adminmail.html
+++ b/src/main/resources/templates/adminmail.html
@@ -171,6 +171,12 @@
 						<span class="title">财经</span>
 						</a>
 					</li>
+					<li th:each="cate : ${category}">
+						<a th:href="@{/newsextra/}+${cate.cate_id}">
+							<i class="icon-hourglass"></i>
+							<span class="title" th:text="${cate.name}">财经</span>
+						</a>
+					</li>
 				</ul>
 				<!-- END SIDEBAR MENU -->
 			</div>
@@ -358,29 +364,54 @@
 												</div>
 												<div class="tab-pane" id="tab_1_2">
 													<div class="portlet light">
-														<div class="portlet-title">
-															<div class="caption">
-																<i class="icon-paper-plane font-yellow-casablanca"></i>
-																<span class="caption-subject bold font-yellow-casablanca uppercase">
-																	Form Input </span>
-																<span class="caption-helper">more samples...</span>
+														<div
+															 class="dataTables_wrapper no-footer">
+															<!--显示新闻信息的表格-->
+															<div class="table-scrollable">
+																<table
+																		class="table table-striped table-bordered table-hover dataTable no-footer"
+																		 role="grid"
+																		aria-describedby="sample_1_info">
+																	<thead>
+																	<tr role="row">
+																		<th class="sorting_asc" tabindex="0"
+																			aria-controls="sample_1"
+																			rowspan="1" colspan="1"
+																			aria-sort="ascending"
+																			aria-label=" Username: activate to sort column ascending" style="width: 200px;">
+																			举报人
+																		</th>
+																		<th class="sorting_disabled"
+																			rowspan="1" colspan="1"
+																			aria-label="Status" style="width: 50px;">
+																			被举报人
+																		</th>
+																		<th class="sorting_disabled"
+																			rowspan="1" colspan="1"
+																			aria-label="Status" style="width: 95px;">
+																			操作
+																		</th>
+
+																	</tr>
+																	</thead>
+																	<tbody>
+																	<tr class="gradeX even" role="row" th:each="r : ${report}">
+																		<td class="sorting_1" th:text="${r.u_name}">
+																			举报人
+																		</td>
+																		<td  th:text="${r.u1_name}">
+																			被举报人
+																		</td>
+																		<td>
+																			<div class="btn-group btn-group-sm btn-group-solid">
+																				<button type="button" th:attr="edit_uri=@{/newsitem/}+${r.n_id}" class="btn blue changeBtn2">前往新闻</button>
+																				<button  th:attr="del_uri=@{/reportdelete/}+${r.report_id}" type="button" class="btn red deleteBtn2">忽略</button>
+																			</div>
+																		</td>
+																	</tr>
+																	</tbody>
+																</table>
 															</div>
-															<div class="inputs">
-																<div class="portlet-input input-inline input-medium">
-																	<div class="input-group">
-																		<input type="text" class="form-control input-circle-left" placeholder="search...">
-																		<span class="input-group-btn">
-											<button class="btn btn-circle-right btn-default" type="submit">Go!</button>
-											</span>
-																	</div>
-																</div>
-															</div>
-														</div>
-														<div class="portlet-body">
-															<h4>Heading text goes here...</h4>
-															<p>
-																Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum.
-															</p>
 														</div>
 													</div>
 												</div>
@@ -484,6 +515,12 @@ function userinfo(){
 	$(".changeBtn").click(function(){
 		window.location.href=$(this).attr("edit_uri");
 
+	});
+
+</script>
+<script>
+	$(".changeBtn2").click(function(){
+		window.location.href=$(this).attr("edit_uri");
 
 	});
 
@@ -500,6 +537,12 @@ function userinfo(){
 		{
 			return false;
 		}
+	});
+</script>
+<script>
+	$(".deleteBtn2").click(function(){
+			$("#deletenewsForm").attr("action",$(this).attr("del_uri")).submit();
+			return false;
 	});
 </script>
 <!-- END JAVASCRIPTS -->
