--- a/src/main/resources/templates/extra_news.html
+++ b/src/main/resources/templates/extra_news.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
+<!--[if IE 8]> <html lang="en" class="ie8 no-js"> <![endif]-->
+<!--[if IE 9]> <html lang="en" class="ie9 no-js"> <![endif]-->
+<!--[if !IE]><!-->
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!--<![endif]-->
 <!-- BEGIN HEAD -->
 <head>
 <meta charset="utf-8"/>
-<title>第一资讯 - 首页</title>
+<title th:text="${thiscate.name}">第一资讯 - 体育新闻</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <meta content="" name="description"/>
 <meta content="" name="author"/>
-<!-- BEGIN GLOBAL MANDATORY STYLES -->
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css"/>
-<link href="../static/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-<link href="../static/css/simple-line-icons.min.css" rel="stylesheet" type="text/css"/>
-<link href="../static/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-<link href="../static/css/uniform.default.css" rel="stylesheet" type="text/css"/>
-<link href="../static/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css"/>
-<!-- END GLOBAL MANDATORY STYLES -->
-<!-- BEGIN PAGE LEVEL PLUGIN STYLES -->
-<link href="../static/css/daterangepicker-bs3.css" rel="stylesheet" type="text/css"/>
-<link href="../static/css/jqvmap.css" rel="stylesheet" type="text/css"/>
-<!-- END PAGE LEVEL PLUGIN STYLES -->
-<!-- BEGIN PAGE STYLES -->
-<link href="../static/css/tasks.css" rel="stylesheet" type="text/css"/>
-<!-- END PAGE STYLES -->
-<!-- BEGIN THEME STYLES -->
-<!-- DOC: To use 'rounded corners' style just load 'components-rounded.css' stylesheet instead of 'components.css' in the below style tag -->
-<link href="../static/css/components.css" id="style_components" rel="stylesheet" type="text/css"/>
-<link href="../static/css/plugins.css" rel="stylesheet" type="text/css"/>
-<link href="../static/css/layout.css" rel="stylesheet" type="text/css"/>
-<link href="../static/css/grey.css" rel="stylesheet" type="text/css" id="style_color"/>
-<link href="../static/css/custom.css" rel="stylesheet" type="text/css"/>
-	<link rel="shortcut icon" href="../static/img/favicon.ico" type="image/x-icon" />
-<!-- END THEME STYLES -->
+	<!-- BEGIN GLOBAL MANDATORY STYLES -->
+	<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&subset=all" rel="stylesheet" type="text/css"/>
+	<link href="../static/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+	<link href="../static/css/simple-line-icons.min.css" rel="stylesheet" type="text/css"/>
+	<link href="../static/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+	<link href="../static/css/uniform.default.css" rel="stylesheet" type="text/css"/>
+	<link href="../static/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css"/>
+	<!-- END GLOBAL MANDATORY STYLES -->
+	<!-- BEGIN PAGE LEVEL PLUGIN STYLES -->
+	<link href="../static/css/daterangepicker-bs3.css" rel="stylesheet" type="text/css"/>
+	<link href="../static/css/jqvmap.css" rel="stylesheet" type="text/css"/>
+	<!-- END PAGE LEVEL PLUGIN STYLES -->
+	<!-- BEGIN PAGE STYLES -->
+	<link href="../static/css/tasks.css" rel="stylesheet" type="text/css"/>
+	<!-- END PAGE STYLES -->
+	<!-- BEGIN THEME STYLES -->
+	<!-- DOC: To use 'rounded corners' style just load 'components-rounded.css' stylesheet instead of 'components.css' in the below style tag -->
+	<link href="../static/css/components.css" id="style_components" rel="stylesheet" type="text/css"/>
+	<link href="../static/css/plugins.css" rel="stylesheet" type="text/css"/>
+	<link href="../static/css/layout.css" rel="stylesheet" type="text/css"/>
+	<link href="../static/css/grey.css" rel="stylesheet" type="text/css" id="style_color"/>
+	<link href="../static/css/custom.css" rel="stylesheet" type="text/css"/>
+	<!-- END THEME STYLES -->
 </head>
 <!-- END HEAD -->
 <!-- BEGIN BODY -->
@@ -52,7 +55,7 @@
 	<div class="page-header-inner container">
 		<!-- BEGIN LOGO -->
 		<div class="page-logo">
-			<a href="index.html">
+			<a href="/index.html">
 			<img src="../static/img/logo-default.png" alt="logo" class="logo-default" style = "margin-top: 17px;" />
 			</a>
 			<div class="menu-toggler sidebar-toggler">
@@ -89,12 +92,12 @@
 						<a href="javascript:" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true" >
 						<span class="username username-hide-on-mobile" id="user_span">
 						请登录</span>
-						<i class="fa fa-angle-down"></i>
+							<i class="fa fa-angle-down"></i>
 						</a>
 						<ul class="dropdown-menu dropdown-menu-default">
 							<li>
-								<a href="extra_profile.html" id="user_profile">
-								<i class="icon-user"></i> 个人中心 </a>
+								<a href="/extra_profile.html" id="user_profile">
+									<i class="icon-user"></i> 个人中心 </a>
 							</li>
 							<li>
 								<a href="/contributesubmit.html">
@@ -104,8 +107,8 @@
 							<li class="divider">
 							</li>
 							<li>
-								<a href="login.html" id="user_logout">
-								<i class="icon-key" ></i> 登录 </a>
+								<a href="/login.html" id="user_logout">
+									<i class="icon-key" ></i> 登录 </a>
 							</li>
 						</ul>
 					</li>
@@ -137,11 +140,10 @@
 				<!-- DOC: Set data-keep-expand="true" to keep the submenues expanded -->
 				<!-- DOC: Set data-auto-speed="200" to adjust the sub menu slide up/down speed -->
 				<ul class="page-sidebar-menu page-sidebar-menu-hover-submenu " data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
-					<li class="start active ">
+					<li>
 						<a href="/index.html">
 						<i class="icon-home"></i>
 						<span class="title">首页</span>
-						<span class="selected"></span>
 						</a>
 					</li>
 					<li>
@@ -174,7 +176,6 @@
 						<span class="title">财经</span>
 						</a>
 					</li>
-
 					<li th:each="cate : ${category}">
 						<a th:href="@{/newsextra/}+${cate.cate_id}">
 							<i class="icon-hourglass"></i>
@@ -190,18 +191,19 @@
 		<div class="page-content-wrapper">
 			<div class="page-content">
 				
+				
 				<!-- BEGIN PAGE HEADER-->
-				<h3 class="page-title" style="font-size: 25px;">
-				首页  -  推荐</h3>
+				<h3 class="page-title" style="font-size: 25px;" th:text="${thiscate.name}">
+				体育新闻</h3>
 				<div class="page-bar">
 					<ul class="page-breadcrumb">
 						<li>
 							<i class="fa fa-home"></i>
-							<a href="index.html">Home</a>
+							<a href="/index.html">Home</a>
 							<i class="fa fa-angle-right"></i>
 						</li>
 						<li>
-							<a href="#">推荐</a>
+							<a href="/#" th:text="${thiscate.name}">体育新闻</a>
 						</li>
 					</ul>
 				</div>
@@ -214,38 +216,64 @@
 							<div class="portlet-title">
 								<div class="caption">
 									<i class="icon-share font-blue-steel hide"></i>
-									<span class="caption-subject font-blue-steel bold uppercase">今日推荐新闻</span>
+									<span class="caption-subject font-blue-steel bold uppercase" th:text="${thiscate.name}">体育新闻总览</span>
 							</div>
 						</div>
 							<div class="portlet-body">
-								<div class="scroller" data-always-visible="1" data-rail-visible="0">
+								<div class="media" id="emptywindow" style="display:inherit;font-size: 15px">
+									此页面还没有新闻！
+								</div>
+								<div class="scroller"  data-always-visible="1" data-rail-visible="0">
 									<ul class="feeds">
 										<li th:each="m : ${news}">
 											<a th:href="@{/newsitem/}+${m.n_id}" >
-											<div class="col1">
-												<div class="cont">
-													<div class="cont-col2">
-														<div class="desc">
-															<div style="display: inline;font-size: 14px;"th:text="${m.title}">体育新闻测试</div>
-															<div style="display: inline;">——</div>
-															<div style="display: inline;"><small th:text="${m.category}">体育新闻</small></div>
+												<div class="col1">
+													<div class="cont">
+														<div class="cont-col2">
+															<div class="desc" style="font-size: 14px;" th:text="${m.title}">
+																体育新闻测试
+															</div>
 														</div>
 													</div>
+												</div></a>
+												<div class="col2">
+													<div style="width:90px;margin-top:5px;font-style: italic;color:grey;cursor: not-allowed; " th:text="${m.time}">
+														2020-12-11
+													</div>
 												</div>
-											</div>
-											</a>
-											<div class="col2">
-												<div style="width:90px;margin-top:5px;font-style: italic;color:grey; " th:text="${m.time}">
-													 2020-12-11
-												</div>
-											</div>
 										</li>
+
 									</ul>
 								</div>	
 							</div>
 						</div>
 					</div>
 				</div>
+				<div class="clearfix">
+				</div>	
+				<!--START PAGE CHANGER-->
+				<div class="row">
+					<ul class="pagination"
+						style="visibility: visible;margin-left: 70px;">
+						<li class="prev" th:class="${pageInfo.prePage} == 0 ? 'disabled':'' ">
+							<!-- 上一页-->
+							<a th:href="${pageInfo.prePage} == 0 ? 'javascript:void(0)':@{'/newsextra/'+${thiscate.cate_id}+'?pageNum='+${pageInfo.prePage}}" title="上一页" aria-label="Previous">
+								<span aria-hidden="true">&laquo;</span>
+							</a>
+						</li>
+
+						<li  th:each="pageNum : ${pageInfo.navigatepageNums}"><a th:href="@{'/newsextra/'+${thiscate.cate_id}+'?pageNum='+${pageNum}}">[[${pageNum}]]</a></li>
+
+						<li class="next" th:class="${pageInfo.nextPage} == 0 ? 'disabled':'' ">
+							<a th:href="${pageInfo.nextPage} == 0 ? 'javascript:void(0)':@{'/newsextra/'+${thiscate.cate_id}+'?pageNum='+${pageInfo.nextPage}}" title="下一页"  aria-label="Next">
+								<span aria-hidden="true">&raquo;</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+				<div class="clearfix">
+				</div>
+				<!--END PAGE CHANGER-->
 			</div>						
 		</div>
 	</div>	
@@ -254,7 +282,7 @@
 	<!-- BEGIN FOOTER -->
 	<div class="page-footer">
 		<div class="page-footer-inner">
-			2020 DYZXWeb By SCUStudents
+			 2020 DYZXNews By SCUStudents
 		</div>
 		<div class="scroll-to-top">
 			<i class="icon-arrow-up"></i>
@@ -295,41 +323,43 @@
 <script src="../static/js/tasks.js" type="text/javascript"></script>
 <!-- END PAGE LEVEL SCRIPTS -->
 <script th:inline="javascript">
-jQuery(document).ready(function() {    
-   Metronic.init(); // init metronic core componets
-   Layout.init(); // init layout
-   Demo.init(); // init demo features 
-   QuickSidebar.init(); // init quick sidebar
-   Index.init();   
-   Index.initDashboardDaterange();
-   Index.initJQVMAP(); // init index page's custom scripts
-   Index.initCalendar(); // init index page's custom scripts
-   Index.initCharts(); // init index page's custom scripts
-   Index.initChat();
-   Index.initMiniCharts();
-   Tasks.initDashboardWidget();
-});
-function userMessageReceive(){
-	var register_message= [[${result}]];
-	if(register_message!=null)
-		alert(register_message);
-	userinfo();
+	jQuery(document).ready(function() {
+		Metronic.init(); // init metronic core componets
+		Layout.init(); // init layout
+		Demo.init(); // init demo features
+		QuickSidebar.init(); // init quick sidebar
+		Index.init();
+		Index.initDashboardDaterange();
+		Index.initJQVMAP(); // init index page's custom scripts
+		Index.initCalendar(); // init index page's custom scripts
+		Index.initCharts(); // init index page's custom scripts
+		Index.initChat();
+		Index.initMiniCharts();
+		Tasks.initDashboardWidget();
+	});
+	function userMessageReceive(){
+		var register_message= [[${result}]];
+		if(register_message!=null)
+			alert(register_message);
+		userinfo();
 
-}
-function userinfo(){
-	var usersname=[[${session.user?.username}]];
-	var userpermit=[[${session.user?.permission}]];
-	if(usersname != null)
+	}
+	function userinfo(){
+		var usersname=[[${session.user?.username}]];
+		var userpermit=[[${session.user?.permission}]];
+		if(usersname != null)
 		{
 			$("#user_span").html(usersname);
 			$("#user_logout").attr("href","/loginOut").html("<i class=\"icon-key\" ></i>登出");
 		}
-	if(userpermit==1)
-	{
-		$("#user_profile").attr("href","/admincenter").html("<i class=\"icon-user\"></i> 管理中心");
+		if(userpermit == 1)
+		{
+			$("#user_profile").attr("href","/admincenter").html("<i class=\"icon-user\"></i> 管理中心");
+		}
+		if ([[${ pageInfo.total }]] != 0) {
+			$("#emptywindow").css("display", "none")
+		}
 	}
-
-}
 </script>
 <!-- END JAVASCRIPTS -->
 </body>
