--- a/src/main/resources/templates/extra_search.html
+++ b/src/main/resources/templates/extra_search.html
@@ -185,6 +185,12 @@ License: You must have a valid license purchased only from themeforest(the above
 							<span class="title">财经</span>
 						</a>
 					</li>
+					<li th:each="cate : ${category}">
+						<a th:href="@{/newsextra/}+${cate.cate_id}">
+							<i class="icon-hourglass"></i>
+							<span class="title" th:text="${cate.name}">财经</span>
+						</a>
+					</li>
 				</ul>
 				<!-- END SIDEBAR MENU -->
 			</div>
