--- a/src/main/resources/templates/financenews.html
+++ b/src/main/resources/templates/financenews.html
@@ -178,6 +178,12 @@
 						<span class="selected"></span>
 						</a>
 					</li>
+					<li th:each="cate : ${category}">
+						<a th:href="@{/newsextra/}+${cate.cate_id}">
+							<i class="icon-hourglass"></i>
+							<span class="title" th:text="${cate.name}">财经</span>
+						</a>
+					</li>
 				</ul>
 				<!-- END SIDEBAR MENU -->
 			</div>
