--- a/src/main/resources/templates/news_edit.html
+++ b/src/main/resources/templates/news_edit.html
@@ -52,7 +52,7 @@
 	<div class="page-header-inner container">
 		<!-- BEGIN LOGO -->
 		<div class="page-logo">
-			<a href="index.html">
+			<a href="/index.html">
 			<img src="../static/img/logo-default.png" alt="logo" class="logo-default" style = "margin-top: 17px;"/>
 			</a>
 			<div class="menu-toggler sidebar-toggler">
@@ -135,40 +135,46 @@
 				<!-- DOC: Set data-auto-speed="200" to adjust the sub menu slide up/down speed -->
 				<ul class="page-sidebar-menu page-sidebar-menu-hover-submenu page-sidebar-menu-closed " data-keep-expanded="false" data-auto-scroll="true" data-slide-speed="200">
 					<li class="start active ">
-						<a href="index.html">
+						<a href="/index.html">
 						<i class="icon-home"></i>
 						<span class="title">首页</span>
 						<span class="selected"></span>
 						</a>
 					</li>
 					<li>
-						<a href="musenews.html">
+						<a href="/musenews.html">
 						<i class="icon-music-tone"></i>
 						<span class="title">娱乐</span>
 						</a>
 					</li>
 					<li>
-						<a href="sportsnews.html">
+						<a href="/sportsnews.html">
 						<i class="icon-flag"></i>
 						<span class="title">体育</span>
 						</a>
 					</li>
 					<li>
-						<a href="technews.html">
+						<a href="/technews.html">
 						<i class="icon-chemistry"></i>
 						<span class="title">科技</span>
 						</a>
 					</li>
 					<li>
-						<a href="militarynews.html">
+						<a href="/militarynews.html">
 						<i class="icon-rocket"></i>
 						<span class="title">军事</span>
 						</a>
 					</li>
 					<li>
-						<a href="financenews.html">
+						<a href="/financenews.html">
 						<i class="icon-basket"></i>
 						<span class="title">财经</span>
+						</a>
+					</li>
+					<li th:each="cate : ${category}">
+						<a th:href="@{/newsextra/}+${cate.cate_id}">
+							<i class="icon-hourglass"></i>
+							<span class="title" th:text="${cate.name}">财经</span>
 						</a>
 					</li>
 				</ul>
@@ -252,6 +258,7 @@
 															<option value="科技新闻">科技新闻</option>
 															<option value="军事新闻">军事新闻</option>
 															<option value="财经新闻">财经新闻</option>
+															<option th:each="cate : ${category}" th:value="${cate.name}" th:text="${cate.name}">财经新闻</option>
 														</select>
 														<div class="col-md-6">
 															<div class="input-icon">
