--- a/src/main/resources/templates/newsmanage.html
+++ b/src/main/resources/templates/newsmanage.html
@@ -171,6 +171,12 @@
 						<span class="title">财经</span>
 						</a>
 					</li>
+					<li th:each="cate : ${category}">
+						<a th:href="@{/newsextra/}+${cate.cate_id}">
+							<i class="icon-hourglass"></i>
+							<span class="title" th:text="${cate.name}">财经</span>
+						</a>
+					</li>
 				</ul>
 				<!-- END SIDEBAR MENU -->
 			</div>
@@ -250,6 +256,9 @@
 												</li>
 												<li>
 													<a href="#tab_1_2" data-toggle="tab">敏感词管理</a>
+												</li>
+												<li>
+													<a href="#tab_1_3" data-toggle="tab">板块管理</a>
 												</li>
 											</ul>
 										</div>
@@ -390,6 +399,44 @@
 														</div>
 													</div>
 												</div>
+												<div class="tab-pane" id="tab_1_3">
+													<div class="portlet light">
+														<div class="row">
+															<form th:action="@{/addcategory}" method="post">
+																<div class="input-group">
+																	<input type="text" class="form-control" autocomplete="off" placeholder="添加板块..." name="catename">
+																	<span class="input-group-btn">
+																	<button type="submit" class="btn btn-success">添加</a></button>
+																	</span>
+																</div>
+															</form>
+															<div class="table-scrollable">
+																<table class="table table-striped table-hover">
+																	<thead>
+																	<tr>
+																		<th>
+																			板块名称
+																		</th>
+																		<th>
+																			操作
+																		</th>
+																	</tr>
+																	</thead>
+																	<tbody>
+																	<tr th:each="c : ${category}">
+																		<td th:text="${c.name}">
+																			板块1
+																		</td>
+																		<td>
+																			<button  th:attr="del_uri=@{/catedelete/}+${c.cate_id}" type="button" class="btn btn-xs red deleteBtn3">删除</button>
+																		</td>
+																	</tr>
+																	</tbody>
+																</table>
+															</div>
+														</div>
+													</div>
+												</div>
 												<form id="deletenewsForm"  method="post">
 													<input type="hidden" name="_method"  value="delete"/>
 												</form>
@@ -491,6 +538,21 @@
 	});
 
 </script>
+	<script>
+		$(".deleteBtn3").click(function(){
+			var reconfirm=confirm("你确定要删除该板块吗？这将会一并删除该板块下的新闻");
+			if(reconfirm)
+			{
+				$("#deletenewsForm").attr("action",$(this).attr("del_uri")).submit();
+				return false;
+			}
+			else
+			{
+				return false;
+			}
+		});
+
+	</script>
 <script>
 	$(".changeBtn").click(function(){
 			window.location.href=$(this).attr("edit_uri");
